--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,16 @@ alembic = "^1.13.2"
 taskiq-aiogram = "^0.3.1"
 taskiq-nats = "^0.4.0"
 dynaconf = "^3.2.6"
-psycopg = "^3.2.1"
+psycopg = {extras = ["binary"], version = "^3.2.3"}
 psycopg-pool = "^3.2.2"
 psycopg2-binary = "^2.9.10"
+asyncpg = "^0.30.0"
+sqlalchemy = "^2.0.0"
+google = "^3.0.0"
+oauth2 = "^1.9.0.post1"
+google-api-python-client = "^2.158.0"
+google-auth-httplib2 = "^0.2.0"
+google-auth-oauthlib = "^1.2.1"
 
 
 [tool.poetry.group.dev.dependencies]
